--- a/README
+++ b/README
@@ -1,10 +1,13 @@
 # hello-clojure
 
-My first clojure app
+My first clojure app, mostly stolen from the [Heroku Docs][docs].
+
+[docs]: https://devcenter.heroku.com/articles/clojure
 
 ## Usage
 
 ```bash
 $ heroku create
 $ git push heroku master
+$ heroku open
 ```
